<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/myMall"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/personal_info_bg" >

        <ImageButton
            android:id="@+id/my_ib_login"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="#00000000"
            android:contentDescription="@string/login"
            android:scaleType="fitXY"
            android:src="@drawable/selector_personal_avatar_unlogin" />

        <TextView
            android:id="@+id/my_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_ib_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_personal_show"
        android:onClick="showAllCollection" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:drawableLeft="@drawable/personal_icon_collection"
            android:drawablePadding="10dp"
            android:text="@string/myCollection"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/personal_arrow_right"
            android:text="@string/myAllCollection"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_personal_show"
        android:onClick="showAllOrder" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:drawableLeft="@drawable/personal_icon_order"
            android:drawablePadding="10dp"
            android:text="@string/myOrder"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/personal_arrow_right"
            android:text="@string/myAllOrder"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>