<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/updateShopNum"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/numSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberSub"/>
        <EditText
            android:id="@+id/edt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="number"/>
        <Button
            android:id="@+id/numAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberAdd"/>
    </LinearLayout>

</LinearLayout>
