<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView 
            android:id="@+id/myShop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/myShop"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>  
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.6dp"
            android:background="@color/divide_line" 
            android:layout_alignBottom="@id/myShop">
        </View>
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/main_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
  

	    <RelativeLayout 
	        android:id="@+id/price_relative"
            android:visibility="visible"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:background="#cc111111"
	        >
	        <CheckBox 
	            android:id="@+id/all_check"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="1dp"	            
	            android:gravity="center_vertical"/>
	        <TextView 
	            android:id="@+id/collection"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center"
	            android:text="@string/allslect"
	            android:textSize="15sp"
	            android:layout_toRightOf="@id/all_check"
	            android:textColor="@color/white"/>
	        
	        <!-- 商品总价提示 -->
	        <TextView 
	            android:id="@+id/shopTotal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shopTotal"
	            android:layout_marginLeft="10dp"
	            android:textSize="20sp"
	            android:layout_toRightOf="@id/collection"
	            android:textColor="@color/white"/>
	        <!-- 选中商品的总金额 -->
	        <TextView 
	            android:id="@+id/shopTotalPrice"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shopTotalNum"
	            android:textSize="20sp"
	            android:layout_toRightOf="@id/shopTotal"
	            android:textColor="@color/white"/>
	    
	        <!-- 商品总价提示 -->
	        <TextView 
	            android:id="@+id/Total"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shopTotalPrice"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="5dp"
	            android:textSize="15sp"
	            android:layout_toRightOf="@id/collection"
	            android:layout_below="@id/shopTotal"
	            android:textColor="@color/white"
	            />
	        <!-- 选中商品的总金额 -->
	        <TextView 
	            android:id="@+id/shopTotalNum"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shopTotalNum"
	            android:textSize="15sp"
	            android:layout_marginTop="5dp"
	            android:layout_toRightOf="@id/Total"
	            android:layout_below="@id/shopTotal"
	            android:textColor="@color/white"/>
	        
	        <TextView 
	            android:id="@+id/checkOut"
	            android:layout_width="100dp"
	            android:layout_height="match_parent"
	            android:text="@string/checkOut"
	            android:background="@drawable/round_rect_bg_red"
	            android:gravity="center"
	            android:textSize="20sp"
	            android:layout_alignParentRight="true"
	            android:textColor="@color/white"/>
	    </RelativeLayout>
    	    	    
	    <RelativeLayout 
	        android:id="@+id/edit_item"
        	android:visibility="gone"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp">
	        <TextView 
	            android:id="@+id/delete"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:text="@string/delete"
	            android:drawableTop="@drawable/recycle"
	            android:layout_alignParentLeft="true"/>
	        <TextView 
	            android:id="@+id/collection"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginLeft="10dp"
	            android:text="@string/collection"
	            android:drawableTop="@drawable/collection"
	            android:layout_toRightOf="@id/delete"/>
	        <TextView 
	            android:id="@+id/checkOut"
	            android:layout_width="100dp"
	            android:layout_height="match_parent"
	            android:text="@string/checkOut"
	            android:background="@drawable/round_rect_bg_red"
	            android:gravity="center"
	            android:layout_alignParentRight="true"/>
	    </RelativeLayout>
    
</LinearLayout>
